# testingFoo

./: .gitignore  CMakeLists.txt  CMakePresets.json  FooConfig.cmake.in  gitignore  main.cpp
src/: foo.cpp
src/foo/: foo.h
